# TirsvadCLI.Python.Game.Quiz

./: README.md  pyproject.toml  requirements.txt
src/Quiz/: main.py
src/Quiz/data/: logo.py
tests/: test_quiz.py
